[package]
name = "cgp_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#debug = true

[profile.release]
lto = "fat"

[dependencies]
rand = "0.8.5"
float_eq = "1.0.1"
petgraph = "0.6.5"
nohash-hasher = "0.2.0"
clap = { version = "4.2.5", features = ["derive"] }
itertools-num = "0.1.3"
statrs = "0.17.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

